5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1573_1332.log
== SUBMITION (2019-03-11 15:41:04) 
-- CODE:
aresta = 5
area = A
 
print(round(area 3/2*(3*(5)**1/5), 4))
-- EXECUTION TIME:
0.167539
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(area 3/2*(3*(5)**1/5), 4))
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:08) 
-- CODE:
aresta = 5
area = 3/2*(3*(5)**1/5
 
print(round(area, 4))
-- EXECUTION TIME:
0.175523
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:42:59) 
-- CODE:
aresta = 5
area = (3/2*(3*(5)**1/5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.180673
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:02) 
-- CODE:
aresta = 5
area = (3/2*(3*(5)**1/5)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:54) 
-- CODE:
aresta = 5
area = (3/2*(3*(aresta)**1/5)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:41) 
-- CODE:
aresta = 5
area = 3/2*((3*(5)**1/5))
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:47) 
-- CODE:
aresta = 5
area = 3/2*((3*(5)**1/5))
 
print(round(area, 4))
-- EXECUTION TIME:
0.118586
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:49) 
-- CODE:
aresta = 5
area = 3/2*((3*(5)**1/5))
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:21) 
-- CODE:
aresta = 5
area = 3/2*((3*((5)**1/5)))
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:48:24) 
-- CODE:
aresta = 5
area = 3/2*((3*((5)**1/5)))
 
print(round(area, 4))
-- EXECUTION TIME:
0.206326
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:24) 
-- CODE:
aresta = 5
area = 3/2*((3*((5)**1/5)))
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:59) 
-- CODE:
aresta = 5
area = 3/2*((3*((5))**1/5))
 
print(round(area, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:10) 
-- CODE:
aresta = 5
area = 3/2*(3*((5)**1/5))**1/5
 
print(round(area, 4))
-- OUTPUT:
0.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:50:12) 
-- CODE:
aresta = 5
area = 3/2*(3*((5)**1/5))**1/5
 
print(round(area, 4))
-- EXECUTION TIME:
0.125883
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
0.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:13) 
-- CODE:
aresta = 5
area = 3/2*(3*((5)**1/5))**1/5
 
print(round(area, 4))
-- OUTPUT:
0.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:27) 
-- CODE:
aresta = 5
area = 3/2*(3*((5)**1/5)**1/5)
 
print(round(area, 4))
-- OUTPUT:
0.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:50:59) 
-- CODE:
aresta = 5
area = 3/2*(3*((5**2)**1/5)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:06) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/5)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:51:09) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.180018
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:10) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/5)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:22) 
-- CODE:
aresta = 5
area = 3/2*((*(5**2))**1/5)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*((*(5**2))**1/5)
                ^
SyntaxError: can't use starred expression here
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:53) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/5)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:51:55) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/5)
 
print(round(area, 4))
-- EXECUTION TIME:
0.10884
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:51:56) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/5)
 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:36) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/2) 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:52:38) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/2) 
print(round(area, 4))
-- EXECUTION TIME:
0.122187
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:38) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2)**1/2) 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:57) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2))**1/2 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:52:58) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2))**1/2 
print(round(area, 4))
-- EXECUTION TIME:
0.159348
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:52:59) 
-- CODE:
aresta = 5
area = 3/2*(3*(5**2))**1/2 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:53:52) 
-- CODE:
aresta = 5
area = 3/2*(3*((5**2)**1/2)) 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:53:53) 
-- CODE:
aresta = 5
area = 3/2*(3*((5**2)**1/2)) 
print(round(area, 4))
-- EXECUTION TIME:
0.208518
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:53:54) 
-- CODE:
aresta = 5
area = 3/2*(3*((5**2)**1/2)) 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:46) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**1/2) 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:55:48) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**1/2) 
print(round(area, 4))
-- EXECUTION TIME:
0.164311
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:55:48) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**1/2) 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:57:29) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:57:32) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- EXECUTION TIME:
0.240797
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:57:33) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:58:03) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:58:04) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- EXECUTION TIME:
0.188077
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:58:05) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:16:56) 
-- CODE:
aresta = 5
area = 3/2*(3*5) 
print(round(area, 4))
-- EXECUTION TIME:
0.168866
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:17:36) 
-- CODE:
aresta = 5
area = 3/2*(3*5) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:17:44) 
-- CODE:
aresta = 5
area = 3/2*(3*5) 
print(round(area, 4))
-- EXECUTION TIME:
0.2141
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:18:34) 
-- CODE:
aresta = 5
area = 3/2*(3*5) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:18:35) 
-- CODE:
aresta = 5
area = 3/2*(3*5) 
print(round(area, 4))
-- EXECUTION TIME:
0.141251
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:19:07) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:19:08) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- EXECUTION TIME:
0.145222
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:21:05) 
-- CODE:
aresta = 5
area = 3/2*((3*((5)**0.5))) 
print(round(area, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:21:07) 
-- CODE:
aresta = 5
area = 3/2*((3*((5)**0.5))) 
print(round(area, 4))
-- EXECUTION TIME:
0.164362
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:21:22) 
-- CODE:
aresta = 5
area = A=3/2*((3*((5)**0.5))) 
print(round(area, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:21:25) 
-- CODE:
aresta = 5
area = A=3/2*((3*((5)**0.5))) 
print(round(area, 4))
-- EXECUTION TIME:
0.148095
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:21:47) 
-- CODE:
aresta = 5
area = 3/2*((3*((5**2)**0.5))) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:21:49) 
-- CODE:
aresta = 5
area = 3/2*((3*((5**2)**0.5))) 
print(round(area, 4))
-- EXECUTION TIME:
0.177372
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:23:59) 
-- CODE:
aresta = 5
area = 3/2*((45)**0,5) 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*((45)**0,5) 
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:24:05) 
-- CODE:
aresta = 5
area = 3/2*((45)**0,5) 
print(round(area, 4))
-- EXECUTION TIME:
0.200541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = 3/2*((45)**0,5) 
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:24:16) 
-- CODE:
aresta = 5
area = 3/2*((45)**0,5) 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*((45)**0,5) 
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:24:58) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:25:00) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- EXECUTION TIME:
0.180239
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:27:00) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:27:02) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- EXECUTION TIME:
0.210177
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:27:10) 
-- CODE:
aresta = 5
area = 3/2*((3*(5**2))**0.5) 
print(round(area, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:27:39) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:27:40) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- EXECUTION TIME:
0.185857
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:27:46) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- EXECUTION TIME:
0.130863
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:27:47) 
-- CODE:
aresta = 5
area = 3/2*(15) 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:28:19) 
-- CODE:
aresta = 5
area = 3/2*((45)**0.5) 
print(round(area, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:28:20) 
-- CODE:
aresta = 5
area = 3/2*((45)**0.5) 
print(round(area, 4))
-- EXECUTION TIME:
0.123847
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 23:28:46) 
-- CODE:
aresta = 5
area = 3/2*15 
print(round(area, 4))
-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 23:28:47) 
-- CODE:
aresta = 5
area = 3/2*15 
print(round(area, 4))
-- EXECUTION TIME:
0.126318
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:07:11) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*(5)**2 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:07:16) 
-- CODE:
aresta = 5
area = 3/2*(3)**0.5*(5)**2 
print(round(area, 4))
-- EXECUTION TIME:
0.172179
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
